fix layout of counter on people who know you well on mobile

--- a/src/components/Section/History/SummaryCounter/SummaryCounter.scss
+++ b/src/components/Section/History/SummaryCounter/SummaryCounter.scss
@@ -15,7 +15,7 @@
   align-self: center;
 
   img {
-    width: 35px;
+    width: 4.6rem;
     margin-right: 1rem;
   }
 }
